tests/ui/parser/recover/recover-quantified-closure.stderr
error: expected one of `move`, `static`, `|`, or `||`, found `::`
  --> $DIR/recover-quantified-closure.rs:9:14
   |
LL |     for <Foo>::Bar in x {}
   |              ^^ expected one of `move`, `static`, `|`, or `||`

error[E0658]: `for<...>` binders for closures are experimental
  --> $DIR/recover-quantified-closure.rs:2:5
   |
LL |     for<'a> |x: &'a u8| *x + 1;
   |     ^^^^^^^
   |
   = note: see issue #97362 <https://github.com/rust-lang/rust/issues/97362> for more information
   = help: add `#![feature(closure_lifetime_binder)]` to the crate attributes to enable
   = help: consider removing `for<...>`

error[E0658]: `for<...>` binders for closures are experimental
  --> $DIR/recover-quantified-closure.rs:9:5
   |
LL |     for <Foo>::Bar in x {}
   |     ^^^^^^^^^
   |
   = note: see issue #97362 <https://github.com/rust-lang/rust/issues/97362> for more information
   = help: add `#![feature(closure_lifetime_binder)]` to the crate attributes to enable
   = help: consider removing `for<...>`

error: implicit types in closure signatures are forbidden when `for<...>` is present
  --> $DIR/recover-quantified-closure.rs:2:25
   |
LL |     for<'a> |x: &'a u8| *x + 1;
   |     -------             ^
   |     |
   |     `for<...>` is here

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0658`.
